--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
   },
   "homepage": "https://github.com/mzabriskie/pdf-annotate.js#readme",
   "devDependencies": {
-    "babel-core": "6.7.4",
+    "babel-core": "^6.26.3",
     "babel-loader": "6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
-    "coveralls": "^2.11.9",
+    "coveralls": "^3.0.2",
     "istanbul-instrumenter-loader": "^0.2.0",
-    "karma": "^0.13.22",
+    "karma": "^2.0.4",
     "karma-cli": "^0.1.2",
     "karma-coverage": "^0.5.5",
     "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "^0.2.2",
     "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
+    "karma-webpack": "^3.0.0",
     "lolex": "^1.4.0",
-    "mocha": "^2.4.5",
+    "mocha": "^5.2.0",
     "object-assign": "^4.0.1",
     "pdfjs-dist": "1.4.162",
     "simulant": "^0.2.0",
