--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,9 @@ deploy:
   provider: releases
   file:
     - dist/pdf-annotate.js
+    - dist/pdf-annotate.js.map
+    - dist/pdf-annotate.min.js
+    - dist/pdf-annotate.min.js.map
   on:
     tags: true
     node: '8'
