--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ deploy:
     - dist/pdf-annotate.js.map
     - dist/pdf-annotate.min.js
     - dist/pdf-annotate.min.js.map
+  skip_cleanup: true
   on:
     tags: true
     node: '8'
