--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-annotate.js",
-  "version": "0.0.0",
+  "version": "18.10.0",
   "description": "Annotation layer for pdf.js",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mzabriskie/pdf-annotate.js.git"
+    "url": "git+https://github.com/Submitty/pdf-annotate.js.git"
   },
   "keywords": [
     "pdf",
@@ -21,38 +21,39 @@
   "author": "Matt Zabriskie",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mzabriskie/pdf-annotate.js/issues"
+    "url": "https://github.com/Submitty/pdf-annotate.js/issues"
   },
-  "homepage": "https://github.com/mzabriskie/pdf-annotate.js#readme",
+  "homepage": "https://github.com/Submitty/pdf-annotate.js#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.6.0",
-    "chai": "^3.5.0",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "chai": "^4.2.0",
     "coveralls": "^3.0.2",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "karma": "^2.0.4",
-    "karma-cli": "^0.1.2",
-    "karma-coverage": "^0.5.5",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.2",
-    "karma-sinon-chai": "^1.2.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "karma": "^4.0.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^1.1.2",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
-    "lolex": "^1.4.0",
-    "mocha": "^5.2.0",
-    "object-assign": "^4.0.1",
-    "pdfjs-dist": "1.4.162",
-    "simulant": "^0.2.0",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
+    "karma-webpack": "^3.0.5",
+    "lolex": "^3.1.0",
+    "mocha": "^6.0.2",
+    "pdfjs-dist": "2.0.943",
+    "sinon": "^7.2.6",
+    "sinon-chai": "^3.3.0",
     "twitter-text": "^1.13.4",
-    "webpack": "1.12.14",
-    "webpack-dev-server": "1.14.1"
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "create-stylesheet": "^0.3.0",
-    "object-assign": "^4.0.1"
+    "object-assign": "^4.1.1"
   }
 }
