Major refactor of annotator (#5)
* Whole bunch of work

* Fix syntax error

* Try and debug Chrome test failures on Travis

* Use strictEqual for tests

* Focus on just Firefox right now for Travis

* Reintroduce CI flag for test

* Move search to be more towards center of annotation for test

* Move event testing to more center of annotations

* Add chrome to test on Travis

* Try and fix failing test on Chrome

* Attempt to fix final broken tests in Chrome

* Fix syntax error and add explanation of what I'm doing

* Add case insensitivity to CI environment check

* Test for string or boolean on environment flag

* Move userId to be self-contained in LocalStoreAdapter

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
   - '10'
 
 addons:
+  chrome: stable
   firefox: latest
 
 install:
@@ -17,7 +18,8 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 
 script:
-  - npm run-script build
+  - npm test
+  - npm run build
 
 #after_script:
 #  - npm run coveralls
