Remove the dist/ folder once and for all

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,7 @@ coverage/
 sandbox/shared
 web/shared
 dist/
-web-dist
+web-dist/
 npm-debug.log
-dist/pdf-annotate.js
-dist/pdf-annotate.js.map
-dist/pdf-annotate.min.js
-dist/pdf-annotate.min.js.map
 .DS_Store
 .idea/
