--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage": "^1.1.2",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-coveralls": "^2.1.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "^4.0.0-rc.6",
     "lolex": "^3.1.0",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.3",
     "pdfjs-dist": "2.0.943",
     "sinon": "^7.2.6",
     "sinon-chai": "^3.3.0",
