--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,10 @@ script:
 #after_script:
 #  - npm run coveralls
 
-email:
-  on_failure: change
-  on_success: never
+notifications:
+  email:
+    on_failure: change
+    on_success: never
 
 deploy:
   provider: releases
