--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
   },
   "homepage": "https://github.com/Submitty/pdf-annotate.js#readme",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-add-module-exports": "^1.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.4",
     "eslint": "^5.16.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^4.0.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
@@ -52,17 +52,17 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.0-rc.6",
+    "karma-webpack": "^4.0.2",
     "lolex": "^3.1.0",
-    "mocha": "^6.1.3",
+    "mocha": "^6.1.4",
     "pdfjs-dist": "2.0.943",
-    "sinon": "^7.2.6",
+    "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
     "twitter-text": "^1.13.4",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "create-stylesheet": "^0.3.0",
