--- a/package.json
+++ b/package.json
@@ -64,10 +64,7 @@
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2"
   },
-  "dependencies": {
-    "create-stylesheet": "^0.3.0",
-    "object-assign": "^4.1.1"
-  },
+  "dependencies": {},
   "files": [
     "dist",
     "src",
