--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "./node_modules/.bin/eslint .",
     "startindocker": "./scripts/web-docker",
     "build": "webpack && MINIFY=1 webpack",
-    "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "codecov": "codecov"
   },
   "repository": {
     "type": "git",
@@ -40,14 +40,13 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.4",
+    "codecov": "^3.5.0",
     "eslint": "^6.0.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^3.0.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-coveralls": "^2.1.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
