--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ script:
   - npm test
   - npm run build
 
-#after_script:
-#  - npm run coveralls
+after_script:
+  - npm run codecov
 
 notifications:
   email:
