--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "./node_modules/.bin/eslint .",
     "startindocker": "./scripts/web-docker",
     "build": "webpack && MINIFY=1 webpack",
-    "codecov": "codecov"
+    "codecov": "codecov",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
