--- a/package.json
+++ b/package.json
@@ -48,20 +48,19 @@
     "karma-chrome-launcher": "^3.0.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-firefox-launcher": "^1.1.0",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
-    "lolex": "^5.1.1",
     "mocha": "^7.1.0",
     "pdfjs-dist": "2.2.228",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
+    "terser-webpack-plugin": "^2.3.5",
     "twitter-text": "^1.13.4",
-    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {},
