--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@ npm-debug.log
 .DS_Store
 .idea/
 shared/pdf.js
+shared/pdf.js.map
 shared/pdf.worker.js
+shared/pdf.worker.js.map
 shared/pdf_viewer.css
 shared/pdf_viewer.js
+shared/pdf_viewer.js.map
 shared/cmaps/
