chore: loosen constraint on peer dependency
Signed-off-by: Matthew Peveler <matt.peveler@gmail.com>

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "pdfjs-dist": "2.6.347"
+    "pdfjs-dist": "^2.4.456"
   },
   "files": [
     "dist",
