--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.4.0",
   "description": "Annotation layer for pdf.js",
   "main": "index.js",
+  "types": "types",
   "scripts": {
     "test": "karma start --single-run",
     "start": "./scripts/web",
@@ -10,7 +11,8 @@
     "startindocker": "./scripts/web-docker",
     "build": "webpack && MINIFY=1 webpack",
     "codecov": "codecov",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build && npm run types",
+    "types": "tsc"
   },
   "repository": {
     "type": "git",
@@ -58,6 +60,7 @@
     "sinon": "^9.0.2",
     "sinon-chai": "^3.3.0",
     "terser-webpack-plugin": "^4.2.3",
+    "typescript": "^4.5.5",
     "webpack": "^4.34.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.7.2"
@@ -69,6 +72,7 @@
     "dist",
     "src",
     "index.js",
+    "types",
     "LICENSE.md",
     "README.md",
     "webpack.config.js"
