--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@submitty/pdf-annotate.js",
-  "version": "2.5.2",
+  "version": "2.5.1",
   "description": "Annotation layer for pdf.js",
   "main": "index.js",
   "types": "types",
@@ -40,30 +40,33 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "assert": "^2.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
     "chai": "^4.2.0",
     "codecov": "^3.5.0",
     "eslint": "^7.19.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^6.1.1",
-    "karma-chrome-launcher": "^3.0.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-firefox-launcher": "^2.1.1",
-    "karma-mocha": "^2.0.0",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-mocha": "^2.0.1",
     "karma-sinon-chai": "^2.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^8.3.1",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-spec-reporter": "^0.0.36",
+    "karma-webpack": "^5.0.0",
+    "mocha": "^10.2.0",
     "pdfjs-dist": "2.9.359",
+    "process": "^0.11.10",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.3.0",
-    "terser-webpack-plugin": "^4.2.3",
+    "terser-webpack-plugin": "^5.3.9",
     "typescript": "^4.5.5",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "peerDependencies": {
     "pdfjs-dist": "^2.4.456"
