--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-istanbul": "^7.0.0",
     "chai": "^4.2.0",
     "codecov": "^3.5.0",
     "eslint": "^7.19.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^6.1.1",
     "karma-chrome-launcher": "^3.0.0",
     "karma-cli": "^2.0.0",
@@ -53,15 +53,15 @@
     "karma-mocha": "^2.0.0",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
+    "karma-webpack": "^5.0.1",
     "mocha": "^10.4.0",
     "pdfjs-dist": "4.3.136",
     "sinon": "^18.0.0",
     "sinon-chai": "^3.3.0",
     "terser-webpack-plugin": "^4.2.3",
     "typescript": "^4.5.5",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^4.7.2",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
   },
   "peerDependencies": {
