--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "types": "types",
   "scripts": {
-    "test": "karma start --single-run",
-    "start": "./scripts/web",
-    "lint": "./node_modules/.bin/eslint .",
-    "startindocker": "./scripts/web-docker",
-    "build": "webpack && MINIFY=1 webpack",
-    "codecov": "codecov",
-    "types": "tsc"
-  },
+  "build": "webpack --config webpack.config.js",
+  "test": "mocha webpack.test.js",  
+  "test:webpack": "mocha webpack.test.js",
+  "lint": "./node_modules/.bin/eslint .",
+  "start": "./scripts/web",
+  "startindocker": "./scripts/web-docker",
+  "codecov": "codecov",
+  "types": "tsc"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Submitty/pdf-annotate.js.git"
@@ -37,33 +38,33 @@
   },
   "homepage": "https://github.com/Submitty/pdf-annotate.js#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^1.0.2",
-    "chai": "^4.2.0",
-    "codecov": "^3.5.0",
-    "eslint": "^7.19.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^6.1.1",
-    "karma-chrome-launcher": "^3.0.0",
-    "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-firefox-launcher": "^2.1.1",
-    "karma-mocha": "^2.0.0",
-    "karma-sinon-chai": "^2.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^10.4.0",
-    "pdfjs-dist": "4.3.136",
-    "sinon": "^18.0.0",
-    "sinon-chai": "^3.3.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "typescript": "^4.5.5",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.15.0"
-  },
+  "@babel/core": "^7.21.4",  
+  "@babel/preset-env": "^7.21.4",
+  "babel-loader": "^9.2.3",  
+  "babel-plugin-add-module-exports": "^1.0.2",
+  "babel-plugin-istanbul": "^6.0.0", 
+  "chai": "^4.2.0",
+  "codecov": "^3.5.0",
+  "eslint": "^8.40.0",  
+  "karma": "^7.0.0", 
+  "karma-chrome-launcher": "^3.1.0",  
+  "karma-cli": "^2.0.0",
+  "karma-coverage": "^2.0.0", 
+  "karma-firefox-launcher": "^2.1.0",
+  "karma-mocha": "^2.0.0",
+  "karma-sinon-chai": "^2.0.2",
+  "karma-sourcemap-loader": "^0.3.7",
+  "karma-webpack": "^5.0.0",
+  "mocha": "^10.4.0",
+  "pdfjs-dist": "4.3.136",
+  "sinon": "^18.0.0",
+  "sinon-chai": "^3.3.0",
+  "terser-webpack-plugin": "^5.3.0", 
+  "typescript": "^5.1.3", 
+  "webpack": "^5.77.0",  
+  "webpack-cli": "^5.1.4", 
+  "webpack-dev-server": "^4.15.0"  
+},
   "peerDependencies": {
     "pdfjs-dist": "^4.2.67"
   },
